--- a/app/src/main/res/layout/fragment_election.xml
+++ b/app/src/main/res/layout/fragment_election.xml
@@ -3,7 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- TODO: Add node to connect Election ViewModel -->
+    <data>
+        <variable
+            name="electionVM"
+            type="com.example.android.politicalpreparedness.election.ElectionsViewModel" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -12,7 +16,78 @@
 
         <!-- TODO: Add Upcoming Election Recycler and Header -->
 
+           <LinearLayout
+               android:id="@+id/upcoming"
+               android:layout_width="match_parent"
+               android:layout_height="0dp"
+               android:orientation="vertical"
+               app:layout_constraintTop_toTopOf="parent"
+               app:layout_constraintBottom_toTopOf="@id/saved"
+               >
+               <TextView
+                   android:id="@+id/header1"
+                   android:layout_width="match_parent"
+                   android:layout_height="50dp"
+                   android:text="Upcoming Elections"
+                   android:textStyle="bold"
+                   android:textSize="28sp"
+                   android:padding="8dp"
+                   android:layout_marginTop="0dp"
+                   android:layout_marginHorizontal="0dp"
+                   />
+               <ScrollView
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_marginTop="0dp"
+                 >
+                   <LinearLayout
+                       android:id="@+id/upcomingList"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:orientation="vertical"
+                       />
+
+               </ScrollView>
+
+           </LinearLayout>
+
+           <LinearLayout android:id="@+id/saved"
+               android:layout_width="match_parent"
+               android:layout_height="0dp"
+               android:orientation="vertical"
+               app:layout_constraintTop_toBottomOf="@id/upcoming"
+               app:layout_constraintBottom_toBottomOf="parent"
+               >
+               <TextView
+                   android:id="@+id/header2"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:text="Saved Elections"
+                   android:textStyle="bold"
+                   android:textSize="28sp"
+                   app:layout_constraintStart_toStartOf="parent"
+                   android:padding="8dp"/>
+
+               <ScrollView
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_marginBottom="0dp"
+                   android:fillViewport="true">
+                   <LinearLayout
+                       android:id="@+id/savedElection"
+                       android:layout_width="match_parent"
+                       android:layout_height="wrap_content"
+                       android:orientation="vertical"
+                       />
+
+               </ScrollView>
+           </LinearLayout >
+
         <!-- TODO: Add Saved Election Recycler and Header -->
+
+
+        <!-- Add your other views here -->
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
